rest_app/yamls/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickandmorty-deployment
  labels:
    app: rickandmorty
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rickandmorty
  template:
    metadata:
      labels:
        app: rickandmorty
    spec:
      containers:
      - name: rickandmorty
        image: my-rick-and-morty-app:latest
        ports:
        - containerPort: 5010
