rest_app/yamls/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rickandmorty-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: rickandmorty.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: rickandmorty-service
            port:
              number: 80
